--- a/noticias/noticiaAgarrameFuerte.html
+++ b/noticias/noticiaAgarrameFuerte.html
@@ -66,7 +66,7 @@
 
     <div class=imagenes1>
         <video width="500" autoplay>
-            <source src="./AgarrameFuerteTrailer.mp4" type="video/mp4">
+            <source src="./videos/AgarrameFuerteTrailer.mp4" type="video/mp4">
         </video>
 
     </div>
