--- a/noticias/noticiaTheSubstance.html
+++ b/noticias/noticiaTheSubstance.html
@@ -66,7 +66,7 @@
 
     <div class=imagenes1>
         <video width="500" autoplay>
-            <source src="./TheSubstanceTrailer.mp4" type="video/mp4">
+            <source src="./videos/TheSubstanceTrailer.mp4" type="video/mp4">
         </video>
     </div>
 
