--- a/noticias/noticiaTheWatchers.html
+++ b/noticias/noticiaTheWatchers.html
@@ -66,7 +66,7 @@
 
     <div class=imagenes1>
         <video width="500" autoplay>
-            <source src="./TheWatchersTrailer.mp4" type="video/mp4">
+            <source src="./videos/TheWatchersTrailer.mp4" type="video/mp4">
         </video>
 
     </div>
