--- a/noticias/noticiaVirmiglio.html
+++ b/noticias/noticiaVirmiglio.html
@@ -66,7 +66,7 @@
 
     <div class=imagenes1>
         <video width="500" autoplay>
-            <source src="./VermiglioTrailer.mp4" type="video/mp4">
+            <source src="./videos/VermiglioTrailer.mp4" type="video/mp4">
         </video>
 
     </div>
